# tiny-compiler

./: README.md  pnpm-lock.yaml
javacompiler/: .gitignore  README.md  pom.xml
javacompiler/examples/: Arrays.java  Calculator.java  ControlFlow.java  Fibonacci.java
javacompiler/src/main/java/com/compiler/ast/: ASTNode.java  ASTVisitor.java  ArrayAccessExpr.java  AssignExpr.java  BinaryExpr.java  BlockStmt.java  BoolLiteral.java  CallExpr.java  ClassDecl.java  ExprStmt.java  Expression.java  FieldAccessExpr.java  FieldDecl.java  ForStmt.java  IdentifierExpr.java  IfStmt.java  IntLiteral.java  MethodDecl.java  NewExpr.java  NullLiteral.java  Parameter.java  Program.java  ReturnStmt.java  Statement.java  StringLiteral.java  ThisExpr.java  Type.java  UnaryExpr.java  VarDeclStmt.java  WhileStmt.java
javacompiler/src/main/java/com/compiler/backend/: BytecodeGenerator.java
javacompiler/src/main/java/com/compiler/cli/: CompilerCLI.java
javacompiler/src/main/java/com/compiler/ir/: IRGenerator.java
javacompiler/src/main/java/com/compiler/lexer/: Lexer.java  Token.java  TokenType.java
javacompiler/src/main/java/com/compiler/parser/: ParseException.java  Parser.java
javacompiler/src/main/java/com/compiler/semantic/: SemanticAnalyzer.java  (+2 more)
tiny-compiler-rs/: Cargo.toml  README.md
tiny-compiler-rs/src/: ast.rs  codegen.rs  compiler.rs  error.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  transformer.rs  traverser.rs
tiny-compiler-rs/tests/: codegen_tests.rs  compiler_tests.rs  integration_tests.rs  parser_tests.rs  tokenizer_tests.rs  transformer_tests.rs
(+4 files in other folders)
